# grpc_project

./: README.md  client.py  dummy_request.json  dummy_request_2.json  gen_grpc_code.sh  grpcurl_demo.sh  orders.proto  orders_pb2.py  orders_pb2_grpc.py  pyproject.toml  server.py  validate.py
