[tool.poetry]
name = "grpc-project"
version = "0.1.0"
description = "A educational project to learn gRPC with Python"
authors = ["Roios <pedro.roios@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.2.0"
protobuf = "^5.26.1"
grpcio = "^1.63.0"
grpcio-tools = "^1.63.0"
grpcio-reflection = "^1.63.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
